# lindsay-codes

./: .gitignore  _quarto.yml  about.qmd  custom.scss  index.qmd  pyproject.toml  styles.css
docs/: CNAME  about.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
docs/posts/apple-calendar-data/: index.html
docs/posts/apple-watch/: index.html
docs/posts/connect-to-gpu/: index.html
docs/posts/font-design/: index.html
docs/posts/gabfest-interruptions/: index.html
docs/posts/get-started-with-conda/: index.html
docs/posts/get-started-with-uv/: index.html
docs/posts/github-codespaces/: index.html
docs/posts/library-of-congress-download/: index.html
posts/apple-calendar-data/: index.qmd
posts/apple-watch/: index.qmd
posts/connect-to-gpu/: index.qmd
posts/font-design/: index.qmd
posts/gabfest-interruptions/: index.qmd
posts/get-started-with-conda/: index.qmd
posts/get-started-with-uv/: index.qmd
posts/github-codespaces/: index.qmd
posts/library-of-congress-download/: index.qmd
posts/macos-notifications/: index.qmd
posts/more-code-snippets/: index.qmd
posts/old-french-ai/: index.qmd
posts/power-bi-custom-map/: index.qmd
posts/power-bi-custom-map-using-openstreetmap/: index.qmd
posts/realtime-bus-departure-board/: index.qmd
posts/rstudio-code-snippets/: index.qmd
posts/shinylive/: index.qmd
posts/split-transactions-web-app/: index.qmd
posts/webscraping-screenshots/: index.qmd
posts/webscraping-showtimes/: index.qmd
posts/webscraping-showtimes-update/: index.qmd
posts/welcome/: index.qmd
(+35 files in other folders)
